--- a/package.json
+++ b/package.json
@@ -8,8 +8,17 @@
     "lint": "eslint",
     "start": "node index.js"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "thuva4",
+  "license": "MIT",
+  "keywords": [
+    "reddit",
+    "npm",
+    "package",
+    "media",
+    "downloader",
+    "video",
+    "image"
+  ],
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
